# dshare

./: .gitattributes  Cargo.toml  README.md
crates/dshare/: Cargo.toml
crates/dshare-clipboard/: Cargo.toml
crates/dshare-clipboard/src/: lib.rs
crates/dshare-core/: Cargo.toml
crates/dshare-core/src/: config.rs  layout.rs  lib.rs  session.rs
crates/dshare-gui/: Cargo.toml
crates/dshare-gui/src/: lib.rs
crates/dshare-input/: Cargo.toml
crates/dshare-input/src/: lib.rs  linux.rs  windows.rs
crates/dshare-protocol/: Cargo.toml
crates/dshare-protocol/src/: codec.rs  keycode.rs  lib.rs
crates/dshare/src/: main.rs
