[workspace]
resolver = "2"
members = [
    "crates/dshare-protocol",
    "crates/dshare-core",
    "crates/dshare-input",
    "crates/dshare-clipboard",
    "crates/dshare-gui",
    "crates/dshare",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Theeratchai"]

[workspace.dependencies]
# Internal crates
dshare-protocol = { path = "crates/dshare-protocol" }
dshare-core = { path = "crates/dshare-core" }
dshare-input = { path = "crates/dshare-input" }
dshare-clipboard = { path = "crates/dshare-clipboard" }
dshare-gui = { path = "crates/dshare-gui" }

# Async + networking
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
toml = "0.8"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# UUID / time
uuid = { version = "1.10", features = ["v4", "serde"] }

# Clipboard
arboard = "3.4"

# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"

# OS-specific
[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]

[workspace.dependencies.evdev]
version = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
