[package]
name = "dshare-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dshare-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
