[package]
name = "dshare-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dshare-core = { workspace = true }
dshare-protocol = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
