[package]
name = "dshare-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
